Add valibot dependency to package.json and update paths in tsconfig.base.json Update pokemon.ts to import Pokemon from shared-types Update example.spec.ts to search for bulb and expect one li with text Bulbasaur

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "valibot": "^0.30.0"
   },
   "devDependencies": {
     "@nx/devkit": "18.1.2",
